fix: show qrcode claim cooldown tip (#155)
